Fixes extensions spacing.

--- a/client/app/extensions/extensions.styl
+++ b/client/app/extensions/extensions.styl
@@ -1,3 +1,9 @@
 .delete-extension-button,
 .enable-extension-button
 	margin 0.5em 1em 0 0
+
+.meanbase-extension-block
+	height 300px
+	img
+		max-height 100%
+		width 100%
